--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,7 +62,7 @@ jobs:
 
       - name: Install RoboTools
         shell: bash -l {0}
-        run: pip instal -e .
+        run: pip install -e .
 
       - name: Run tests
         shell: bash -l {0}
