--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,3 +73,4 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
           file: ./coverage.xml
+          token: ${{ secrets.CODECOV_TOKEN }}
