--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,8 +69,14 @@ jobs:
         shell: bash -l {0}
         run: pytest --cov --cov-report xml
 
-      - name: Upload Coverage to Codecov
-        uses: codecov/codecov-action@v3
+      # - name: Upload Coverage to Codecov
+      #   uses: codecov/codecov-action@v3
+      #   with:
+      #     file: ./coverage.xml
+      #     token: ${{ secrets.CODECOV_TOKEN }}
+
+      - name: Upload Coverage to Codacy
+        uses: codacy/codacy-coverage-reporter-action@v1
         with:
-          file: ./coverage.xml
-          token: ${{ secrets.CODECOV_TOKEN }}
+          coverage-reports: ./coverage.xml
+          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
