--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -61,7 +61,7 @@ jobs:
       # Publish built docs to gh-pages branch
       - name: Commit documentation changes
         run: |
-          git clone https://github.com/qcr/rosdata.git --branch gh-pages --single-branch gh-pages
+          git clone https://github.com/jmount1992/RoboTools.git --branch gh-pages --single-branch gh-pages
           cp -r docs/build/html/* gh-pages/
           cd gh-pages
           touch .nojekyll
