--- a/environment.yml
+++ b/environment.yml
@@ -17,6 +17,7 @@ dependencies:
   - python=3.7.*
   - pyyaml=6.0
   - setuptools=59.8.*
+  - spatialmath-python=1.0.*
   - sphinx=4.5.*
   - sphinx-autodoc-typehints=1.19.*
   - sphinx-rtd-theme=1.1.*
